--- a/index.html
+++ b/index.html
@@ -58,6 +58,32 @@
         </nav>
     </div>
     <!-- navbar section ended -->
-    <h1>home</h1>
+    <section>
+        <div class="container mx-auto px-4 py-5 md:py-12 lg:py-10 text-center w-[60%] mt-20">
+            <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-5xl font-bold text-[#722f37] mb-1 md:mb-1">
+                Verbind geschenken met <br> persoonlijke <br> boodschappen
+            </h1>
+
+            <p class="text-base sm:text-lg md:text-xl text-[#722f37] leading-tight">
+                Maak van elk cadeau een blijvende herinnering met een <br> digitale boodschap.
+            </p>
+        </div>
+        <div class="flex flex-col sm:flex-row gap-4 w-full max-w-[70%] mx-auto p-4">
+  <!-- first Button -->
+  <button class="flex-1 bg-[#722f37] hover:bg-[#5a252c] text-white font-medium py-4 px-6 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 text-center">
+    <h3 class="text-start">Maak je unieke boodschap</h3>
+    <p class="text-start">Creëer direct een persoonlijke video, foto of
+tekst die je cadeau onvergetelijk maakt!</p>
+
+</button>
+  
+  <!-- Second Button -->
+  <button class="flex-1 border-2 border-[#722f37] text-[#722f37] hover:bg-gray-50 font-medium py-4 px-6 rounded-lg shadow-sm hover:shadow-md transition-all duration-300 text-center">
+      <h3 class="text-start">Hoe het werkt</h3>
+      <p class="text-start">Ontdek snel en eenvoudig hoe je in enkele
+stappen je eigen digitale geschenk verbindt.</p>
+    </button>
+</div>
+    </section>
 </body>
 </html>
