--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Document</title>
+      <style>
+        .font-bodoni {
+            font-family: 'Libre Bodoni', 'Bodoni MT Condensed', serif;
+        }
+    </style>
 </head>
+
 <body>
     <!-- navbar section started -->
     <div class="top-0 py-1 lg:py-1 w-full bg-[#f5e7d6] lg:relative z-50">
@@ -68,22 +75,31 @@
                 Maak van elk cadeau een blijvende herinnering met een <br> digitale boodschap.
             </p>
         </div>
+        <!-- buttons section  -->
         <div class="flex flex-col sm:flex-row gap-4 w-full max-w-[70%] mx-auto p-4">
-  <!-- first Button -->
-  <button class="flex-1 bg-[#722f37] hover:bg-[#5a252c] text-white font-medium py-4 px-6 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 text-center">
-    <h3 class="text-start">Maak je unieke boodschap</h3>
-    <p class="text-start">Creëer direct een persoonlijke video, foto of
-tekst die je cadeau onvergetelijk maakt!</p>
+            <!-- first Button -->
+            <a href="./pages/boodschap.html"
+                class="flex-1 bg-[#722f37] hover:bg-[#5a252c] text-white font-medium py-4 px-6 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 text-center">
 
-</button>
-  
-  <!-- Second Button -->
-  <button class="flex-1 border-2 border-[#722f37] text-[#722f37] hover:bg-gray-50 font-medium py-4 px-6 rounded-lg shadow-sm hover:shadow-md transition-all duration-300 text-center">
-      <h3 class="text-start">Hoe het werkt</h3>
-      <p class="text-start">Ontdek snel en eenvoudig hoe je in enkele
-stappen je eigen digitale geschenk verbindt.</p>
-    </button>
-</div>
+                <button>
+                    <h3 class="text-start cursor-pointer">Maak je unieke boodschap</h3>
+                    <p class="text-start cursor-pointer">Creëer direct een persoonlijke video, foto of
+                        tekst die je cadeau onvergetelijk maakt!</p>
+                </button>
+            </a>
+
+            <!-- Second Button -->
+            <a href="./pages/werkt.html"
+                class="flex-1 border-2 border-[#722f37] text-[#722f37] hover:bg-gray-50 font-medium py-4 px-6 rounded-lg shadow-sm hover:shadow-md transition-all duration-300 text-center">
+                <button>
+                    <h3 class="text-start cursor-pointer">Hoe het werkt</h3>
+                    <p class="text-start cursor-pointer">Ontdek snel en eenvoudig hoe je in enkele
+                        stappen je eigen digitale geschenk verbindt.</p>
+                </button>
+            </a>
+
+        </div>
     </section>
 </body>
+
 </html>
