--- a/pages/over-ons.html
+++ b/pages/over-ons.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Document</title>
+      <style>
+        .font-bodoni {
+            font-family: 'Libre Bodoni', 'Bodoni MT Condensed', serif;
+        }
+    </style>
 </head>
 
 <body>
@@ -68,7 +73,7 @@
         </div>
         <!-- card  -->
         <div
-            class="lg:w-[50%] text-center flex-col justify-center self-center align-center w-auto mx-3 lg:mx-auto my-3 bg-slate-600 rounded-lg shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300">
+            class="lg:w-[50%] text-center flex-col justify-center self-center align-center w-auto mx-3 lg:mx-auto my-3 bg-gray-100 rounded-lg shadow-md overflow-hidden hover:shadow-lg transition-shadow duration-300">
             <!-- Icon  -->
             <div class="flex justify-center my-6">
                 <div class="p-3 rounded-full bg-[#f5e7d6] shadow-sm text-[#722f37]">
