--- a/pages/partners.html
+++ b/pages/partners.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Partners</title>
+      <style>
+        .font-bodoni {
+            font-family: 'Libre Bodoni', 'Bodoni MT Condensed', serif;
+        }
+    </style>
 </head>
 <body>
     <!-- navbar section started -->
