--- a/pages/werkt.html
+++ b/pages/werkt.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Hoe het werkt</title>
+      <style>
+        .font-bodoni {
+            font-family: 'Libre Bodoni', 'Bodoni MT Condensed', serif;
+        }
+    </style>
 </head>
 
 <body>
