--- a/pages/boodschap.html
+++ b/pages/boodschap.html
@@ -211,7 +211,7 @@
         <div>
             <button
                 class="hover:shadow-form w-full rounded-md bg-[#722f37] py-2 md:py-3 px-4 md:px-8 text-sm md:text-base font-semibold text-white outline-none">
-                Book Appointment
+                Bericht versturen
             </button>
         </div>
     </form>
