--- a/pages/werkt.html
+++ b/pages/werkt.html
@@ -50,14 +50,12 @@
 
                 <!-- CTA Button -->
                 <div class="">
-                    <a 
-                    class="mr-10 bg-[#722f37] text-white px-7 py-2 rounded-md hover:bg-[#5a252c] transition duration-300 hidden md:block"
-                    href="./partners.html">
-                        <button
-                        >
-                        Partners
-                    </button>
-                </a>
+                    <a class="mr-10 bg-[#722f37] text-white px-7 py-2 rounded-md hover:bg-[#5a252c] transition duration-300 hidden md:block"
+                        href="./partners.html">
+                        <button>
+                            Partners
+                        </button>
+                    </a>
 
                     <!-- Mobile menu button (only visible on mobile) -->
                     <button type="button" id="mobile-menu-button"
@@ -90,13 +88,17 @@
                     class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Maak
                     je unieke boodschap</a>
                 <a href="./werkt.html"
-                    class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Home</a>
+                    class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Hoe
+                    het werkt</a>
                 <a href="./over-ons.html"
-                    class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Home</a>
-                <button
+                    class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Over
+                    ons</a>
+                <a href="./partners.html"
                     class="flex justify-center items-center w-full bg-[#722f37] text-white px-4 py-2 rounded-md hover:bg-[#5a252c] transition duration-300 mt-2">
-                    Partners
-                </button>
+                    <button>
+                        Partners
+                    </button>
+                </a>
             </div>
         </div>
     </nav>
