--- a/pages/over-ons.html
+++ b/pages/over-ons.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Document</title>
-      <style>
+    <style>
         .font-bodoni {
             font-family: 'Libre Bodoni', 'Bodoni MT Condensed', serif;
         }
@@ -50,14 +50,12 @@
 
                 <!-- CTA Button -->
                 <div class="">
-                    <a 
-                    class="mr-10 bg-[#722f37] text-white px-7 py-2 rounded-md hover:bg-[#5a252c] transition duration-300 hidden md:block"
-                    href="./partners.html">
-                        <button
-                        >
-                        Partners
-                    </button>
-                </a>
+                    <a class="mr-10 bg-[#722f37] text-white px-7 py-2 rounded-md hover:bg-[#5a252c] transition duration-300 hidden md:block"
+                        href="./partners.html">
+                        <button>
+                            Partners
+                        </button>
+                    </a>
 
                     <!-- Mobile menu button (only visible on mobile) -->
                     <button type="button" id="mobile-menu-button"
@@ -90,13 +88,17 @@
                     class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Maak
                     je unieke boodschap</a>
                 <a href="./werkt.html"
-                    class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Home</a>
+                    class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Hoe
+                    het werkt</a>
                 <a href="./over-ons.html"
-                    class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Home</a>
-                <button
+                    class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Over
+                    ons</a>
+                <a href="./partners.html"
                     class="flex justify-center items-center w-full bg-[#722f37] text-white px-4 py-2 rounded-md hover:bg-[#5a252c] transition duration-300 mt-2">
-                    Partners
-                </button>
+                    <button>
+                        Partners
+                    </button>
+                </a>
             </div>
         </div>
     </nav>
@@ -130,36 +132,38 @@
             </div>
             <!-- 3 icons section -->
             <div class="flex flex-col sm:flex-row justify-center items-center gap-6 p-3 mx-auto rounded-lg">
-  <!-- Icon 1 -->
-  <div class="flex flex-col items-center gap-2 w-full sm:w-auto px-2">
-    <!-- Icon Container -->
-    <div class="p-3 rounded-full bg-[#f5e7d6] shadow-sm text-[#722f37] shrink-0">
-      <img class="w-7 h-7" src="../assets/icons/qr-code.svg" alt="QR Code">
-    </div>
-    <!-- Text -->
-    <p class="text-gray-700 text-sm text-center max-w-[180px]">Gebruik de QR-code op het CheersTag kaartje</p>
-  </div>
+                <!-- Icon 1 -->
+                <div class="flex flex-col items-center gap-2 w-full sm:w-auto px-2">
+                    <!-- Icon Container -->
+                    <div class="p-3 rounded-full bg-[#f5e7d6] shadow-sm text-[#722f37] shrink-0">
+                        <img class="w-7 h-7" src="../assets/icons/qr-code.svg" alt="QR Code">
+                    </div>
+                    <!-- Text -->
+                    <p class="text-gray-700 text-sm text-center max-w-[180px]">Gebruik de QR-code op het CheersTag
+                        kaartje</p>
+                </div>
 
-  <!-- Icon 2 -->
-  <div class="flex flex-col items-center gap-2 w-full sm:w-auto px-2">
-    <!-- Icon Container -->
-    <div class="p-3 rounded-full bg-[#f5e7d6] shadow-sm text-[#722f37] shrink-0">
-      <img class="w-7 h-7" src="../assets/icons/message.svg" alt="message">
-    </div>
-    <!-- Text -->
-    <p class="text-gray-700 text-sm text-center max-w-[180px]">Video, audio of tekst die jarenlang bewaard blijft</p>
-  </div>
+                <!-- Icon 2 -->
+                <div class="flex flex-col items-center gap-2 w-full sm:w-auto px-2">
+                    <!-- Icon Container -->
+                    <div class="p-3 rounded-full bg-[#f5e7d6] shadow-sm text-[#722f37] shrink-0">
+                        <img class="w-7 h-7" src="../assets/icons/message.svg" alt="message">
+                    </div>
+                    <!-- Text -->
+                    <p class="text-gray-700 text-sm text-center max-w-[180px]">Video, audio of tekst die jarenlang
+                        bewaard blijft</p>
+                </div>
 
-  <!-- Icon 3 -->
-  <div class="flex flex-col items-center gap-2 w-full sm:w-auto px-2">
-    <!-- Icon Container -->
-    <div class="p-3 rounded-full bg-[#f5e7d6] shadow-sm text-[#722f37] shrink-0">
-      <img class="w-7 h-7" src="../assets/icons/heart.svg" alt="heart">
-    </div>
-    <!-- Text -->
-    <p class="text-gray-700 text-sm text-center max-w-[180px]">Direct bedanken met één tik</p>
-  </div>
-</div>
+                <!-- Icon 3 -->
+                <div class="flex flex-col items-center gap-2 w-full sm:w-auto px-2">
+                    <!-- Icon Container -->
+                    <div class="p-3 rounded-full bg-[#f5e7d6] shadow-sm text-[#722f37] shrink-0">
+                        <img class="w-7 h-7" src="../assets/icons/heart.svg" alt="heart">
+                    </div>
+                    <!-- Text -->
+                    <p class="text-gray-700 text-sm text-center max-w-[180px]">Direct bedanken met één tik</p>
+                </div>
+            </div>
             <!-- Card content -->
             <div class="p-6 pt-2 text-center">
                 <p class="text-white text-start">Hoe? Met onze unieke CheersTag kaartjes, voorzien van een persoonlijke
@@ -254,6 +258,65 @@
         </div>
     </footer>
     <!-- footer ended  -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+       <script>
+        // Toggle mobile menu
+        document.getElementById('mobile-menu-button').addEventListener('click', function () {
+            const menu = document.getElementById('mobile-menu');
+            const isHidden = menu.classList.contains('hidden');
+
+            // Toggle menu visibility
+            menu.classList.toggle('hidden');
+
+            // Toggle hamburger/close icons
+            const hamburger = this.querySelector('svg:not(.hidden)');
+            const close = this.querySelector('svg.hidden');
+            hamburger.classList.toggle('hidden');
+            close.classList.toggle('hidden');
+
+            // Update aria-expanded attribute
+            this.setAttribute('aria-expanded', isHidden ? 'true' : 'false');
+        });
+    </script>
 </body>
 
 </html>
