--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         .font-bodoni {
             font-family: 'Libre Bodoni', 'Bodoni MT Condensed', serif;
         }
+
+        .font-passenger {
+            font-family: "Passenger Serif", serif;
+        }
     </style>
 </head>
 
@@ -21,7 +25,7 @@
                 <!-- brand name  -->
                 <div class="flex-shrink-0">
                     <a href="#" class="text-xl font-bold text-[#722f37]">
-                        <h2 class="font-bold font-bodoni text-[#722f37] text-[40px] ">
+                        <h2 class="font-bold font-passenger text-[#722f37] text-[30px] ">
                             Cheers<span class="text-[#802311]">Tag</span>
                         </h2>
                     </a>
@@ -51,7 +55,7 @@
                 <!-- CTA Button -->
                 <div class="">
                     <a class="mr-10 bg-[#722f37] text-white px-7 py-2 rounded-md hover:bg-[#5a252c] transition duration-300 hidden md:block"
-                        href="./partners.html">
+                        href="./pages/partners.html">
                         <button>
                             Partners
                         </button>
@@ -149,7 +153,7 @@
 
 
 
-       <script>
+    <script>
         // Toggle mobile menu
         document.getElementById('mobile-menu-button').addEventListener('click', function () {
             const menu = document.getElementById('mobile-menu');
