--- a/pages/werkt.html
+++ b/pages/werkt.html
@@ -10,6 +10,10 @@
         .font-bodoni {
             font-family: 'Libre Bodoni', 'Bodoni MT Condensed', serif;
         }
+
+        .font-passenger {
+            font-family: "Passenger Serif", serif;
+        }
     </style>
 </head>
 
@@ -21,7 +25,7 @@
                 <!-- brand name  -->
                 <div class="flex-shrink-0">
                     <a href="#" class="text-xl font-bold text-[#722f37]">
-                        <h2 class="font-bold font-bodoni text-[#722f37] text-[40px] ">
+                        <h2 class="font-bold font-passenger text-[#722f37] text-[30px] ">
                             Cheers<span class="text-[#802311]">Tag</span>
                         </h2>
                     </a>
@@ -198,13 +202,13 @@
             <div class="grid grid-cols-2 sm:grid-cols-4 lg:grid-cols-14 gap-4 lg:gap-8 pt-10 pb-4">
                 <div class="col-span-full lg:col-span-4 lg:col-start-3 mb-10 lg:mb-0">
                     <a href="#" class="flex justify-center lg:justify-start">
-                        <h4 class="text-lg text-white font-medium mb-3">CheersTag.com</h4>
+                        <h4 class="text-lg text-white font-bold mb-3 text-[20px] font-passenger">CheersTag.com</h4>
                     </a>
                     <p class=" text-sm text-white lg:max-w-xs text-center lg:text-left">Verbind uw geschenken met
                         persoonlijke
                         boodschappen. Maak van elk cadeau een blijvende herinnering.</p>
                     <!-- footer icons  -->
-                    <div class="py-3 flex mt-4 gap-3 justify-center lg:justify-start sm:mt-0">
+                    <div class="py-3 flex mt-4 gap-5 justify-center lg:justify-start sm:mt-0">
                         <!-- facebook  -->
                         <a href="#" class="w-7 h-7 flex justify-center items-center ">
                             <img src="../assets/icons/facebook.svg" alt="facebook">
@@ -214,19 +218,19 @@
                             <img src="../assets/icons/instagram.svg" alt="instagram">
                         </a>
                         <!-- twitter  -->
-                        <a href="#" class="w-8 h-7 mx-0.5 flex justify-center items-center ">
+                        <a href="#" class="w-9 h-7 mx-0.5 flex justify-center items-center ">
                             <img src="../assets/icons/twitter.svg" alt="twitter">
                         </a>
                         <!-- mail  -->
-                        <a href="#" class="w-9 h-6 mx-2 flex justify-center items-center ">
+                        <a href="#" class="w-9 h-6 flex justify-center items-center ">
                             <img src="../assets/icons/mail.svg" alt="mail">
                         </a>
 
                     </div>
                 </div>
                 <!--End Col-->
-                <div class="lg:col-span-4 lg:col-start-7 text-center sm:text-left">
-                    <h4 class="text-lg text-white font-medium mb-3 font-bodoni">Links</h4>
+                <div class="lg:col-span-4 lg:col-start-7 md:col-span-1 md:col-start-2 text-center sm:text-center">
+                    <h4 class="text-lg text-white font-bold mb-3 text-[20px] font-passenger">Links</h4>
                     <ul class="text-sm  transition-all duration-500">
                         <li class="mb-3"><a href="#" class="text-white hover:text-white">Home</a></li>
                         <li class="mb-3"><a href="#" class="text-white hover:text-white">Hoe het werkt</a></li>
@@ -237,9 +241,9 @@
                 </div>
                 <!--End Col-->
                 <div class="lg:col-span-2 text-center sm:text-left">
-                    <h4 class="text-lg text-white font-medium mb-3">Contact</h4>
+                    <h4 class="text-lg text-white font-bold mb-3 text-[20px] font-passenger">Contact</h4>
                     <ul class="text-sm transition-all duration-500">
-                        <li class="mb-3"><a href="#" class="text-white hover:text-white">CheersTag.com</a></li>
+                        <li class="mb-3"><a href="#" class="text-white hover:text-white ">CheersTag.com</a></li>
                         <li class="mb-3"><a href="#" class="text-white hover:text-white">Amstelveen</a></li>
                         <li class="mb-3"><a href="#" class="text-white hover:text-white">info@cheerstag.com</a></li>
                         <li><a href="#" class="text-white hover:text-white">+31 (0)6 42752700</a></li>
