--- a/pages/over-ons.html
+++ b/pages/over-ons.html
@@ -10,6 +10,10 @@
         .font-bodoni {
             font-family: 'Libre Bodoni', 'Bodoni MT Condensed', serif;
         }
+
+        .font-passenger {
+            font-family: "Passenger Serif", serif;
+        }
     </style>
 </head>
 
@@ -21,7 +25,7 @@
                 <!-- brand name  -->
                 <div class="flex-shrink-0">
                     <a href="#" class="text-xl font-bold text-[#722f37]">
-                        <h2 class="font-bold font-bodoni text-[#722f37] text-[40px] ">
+                         <h2 class="font-bold font-passenger text-[#722f37] text-[30px] ">
                             Cheers<span class="text-[#802311]">Tag</span>
                         </h2>
                     </a>
@@ -201,7 +205,7 @@
                         persoonlijke
                         boodschappen. Maak van elk cadeau een blijvende herinnering.</p>
                     <!-- footer icons  -->
-                    <div class="py-3 flex mt-4 space-x-3 justify-center lg:justify-start sm:mt-0">
+                    <div class="py-3 flex mt-4 gap-5 justify-center lg:justify-start sm:mt-0">
                         <!-- facebook  -->
                         <a href="#" class="w-7 h-7 flex justify-center items-center ">
                             <img src="../assets/icons/facebook.svg" alt="facebook">
@@ -211,18 +215,18 @@
                             <img src="../assets/icons/instagram.svg" alt="instagram">
                         </a>
                         <!-- twitter  -->
-                        <a href="#" class="w-8 h-7 mx-0.5 flex justify-center items-center ">
+                        <a href="#" class="w-9 h-7 mx-0.5 flex justify-center items-center ">
                             <img src="../assets/icons/twitter.svg" alt="twitter">
                         </a>
                         <!-- mail  -->
-                        <a href="#" class="w-9 h-6 mx-2 flex justify-center items-center ">
+                        <a href="#" class="w-9 h-6 flex justify-center items-center ">
                             <img src="../assets/icons/mail.svg" alt="mail">
                         </a>
 
                     </div>
                 </div>
                 <!--End Col-->
-                <div class="lg:col-span-4 lg:col-start-7 text-center sm:text-left">
+                <div class="lg:col-span-4 lg:col-start-7 md:col-span-1 md:col-start-2 text-center sm:text-center">
                     <h4 class="text-lg text-white font-medium mb-3 font-bodoni">Links</h4>
                     <ul class="text-sm  transition-all duration-500">
                         <li class="mb-3"><a href="#" class="text-white hover:text-white">Home</a></li>
@@ -247,7 +251,7 @@
             <hr class="w-[72%] mx-auto text-[#8b4850a6] my-2">
             <!--Grid-->
             <div class="py-4">
-                <div class="flex items-center justify-center flex-col gap-48 lg:justify-around  lg:flex-row">
+                <div class="flex items-center justify-center flex-col gap-1 lg:justify-around  lg:flex-row">
                     <span class="text-sm text-white">©<a href="#">pagedone</a>2024, All rights reserved.</span>
                     <ul class="flex items-center gap-9 mt-4 lg:mt-0">
                         <li><a href="#" class="text-sm text-white">Privacybeleid</a></li>
@@ -298,7 +302,7 @@
 
 
 
-       <script>
+    <script>
         // Toggle mobile menu
         document.getElementById('mobile-menu-button').addEventListener('click', function () {
             const menu = document.getElementById('mobile-menu');
