--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
 
         <!-- Mobile Menu -->
-        <div class="md:hidden hidde" id="mobile-menu">
+        <div class="md:hidden hidden" id="mobile-menu">
             <div class="px-2 pt-2 pb-3 space-y-2 sm:px-3 text-center items-center">
                 <a href="../index.html"
                     class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Home</a>
@@ -124,8 +124,8 @@
                 class="flex-1 bg-[#722f37] hover:bg-[#5a252c] text-white font-medium py-4 px-6 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 text-center">
 
                 <button>
-                    <h3 class="text-start cursor-pointer">Maak je unieke boodschap</h3>
-                    <p class="text-start cursor-pointer">Creëer direct een persoonlijke video, foto of
+                    <h3 class="text-start font-bold cursor-pointer">Maak je unieke boodschap</h3>
+                    <p class="text-start font-normal cursor-pointer">Creëer direct een persoonlijke video, foto of
                         tekst die je cadeau onvergetelijk maakt!</p>
                 </button>
             </a>
@@ -134,8 +134,8 @@
             <a href="./pages/werkt.html"
                 class="flex-1 border-2 border-[#722f37] text-[#722f37] hover:bg-gray-50 font-medium py-4 px-6 rounded-lg shadow-sm hover:shadow-md transition-all duration-300 text-center">
                 <button>
-                    <h3 class="text-start cursor-pointer">Hoe het werkt</h3>
-                    <p class="text-start cursor-pointer">Ontdek snel en eenvoudig hoe je in enkele
+                    <h3 class="text-start font-bold cursor-pointer">Hoe het werkt</h3>
+                    <p class="text-start font-normal cursor-pointer">Ontdek snel en eenvoudig hoe je in enkele
                         stappen je eigen digitale geschenk verbindt.</p>
                 </button>
             </a>
