--- a/pages/partners.html
+++ b/pages/partners.html
@@ -25,7 +25,7 @@
                 <!-- brand name  -->
                 <div class="flex-shrink-0">
                     <a href="#" class="text-xl font-bold text-[#722f37]">
-                         <h2 class="font-bold font-passenger text-[#722f37] text-[30px] ">
+                        <h2 class="font-bold font-passenger text-[#722f37] text-[30px] ">
                             Cheers<span class="text-[#802311]">Tag</span>
                         </h2>
                     </a>
@@ -84,7 +84,7 @@
         </div>
 
         <!-- Mobile Menu -->
-        <div class="md:hidden hidde" id="mobile-menu">
+        <div class="md:hidden hidden" id="mobile-menu">
             <div class="px-2 pt-2 pb-3 space-y-2 sm:px-3 text-center items-center">
                 <a href="../index.html"
                     class="block px-3 py-2 rounded-md text-base font-medium text-[#722f37] hover:text-[#f5e7d6] hover:bg-[#722f37]">Home</a>
@@ -189,6 +189,7 @@
             </ol>
         </div>
     </section>
+
     <!-- footer started  -->
     <footer class="w-full bg-[#722f37]">
         <div class="mx-auto max-w-7xl px-6 lg:px-8">
@@ -196,7 +197,7 @@
             <div class="grid grid-cols-2 sm:grid-cols-4 lg:grid-cols-14 gap-4 lg:gap-8 pt-10 pb-4">
                 <div class="col-span-full lg:col-span-4 lg:col-start-3 mb-10 lg:mb-0">
                     <a href="#" class="flex justify-center lg:justify-start">
-                        <h4 class="text-lg text-white font-medium mb-3">CheersTag.com</h4>
+                        <h4 class="text-lg text-white font-bold mb-3 text-[20px] font-passenger">CheersTag.com</h4>
                     </a>
                     <p class=" text-sm text-white lg:max-w-xs text-center lg:text-left">Verbind uw geschenken met
                         persoonlijke
@@ -224,20 +225,22 @@
                 </div>
                 <!--End Col-->
                 <div class="lg:col-span-4 lg:col-start-7 md:col-span-1 md:col-start-2 text-center sm:text-center">
-                    <h4 class="text-lg text-white font-medium mb-3 font-bodoni">Links</h4>
+                    <h4 class="text-lg text-white font-bold mb-3 text-[20px] font-passenger">Links</h4>
                     <ul class="text-sm  transition-all duration-500">
-                        <li class="mb-3"><a href="#" class="text-white hover:text-white">Home</a></li>
-                        <li class="mb-3"><a href="#" class="text-white hover:text-white">Hoe het werkt</a></li>
-                        <li class="mb-3"><a href="#" class="text-white hover:text-white">Over ons</a></li>
+                        <li class="mb-3"><a href="../index.html" class="text-white hover:text-white">Home</a></li>
+                        <li class="mb-3"><a href="./werkt.html" class="text-white hover:text-white">Hoe het werkt</a>
+                        </li>
+                        <li class="mb-3"><a href="./over-ons.html" class="text-white hover:text-white">Over ons</a></li>
                         <li class="mb-3"><a href="#" class="text-white hover:text-white">Contact</a></li>
-                        <li><a href="#" class="text-white hover:text-white">Partners</a></li>
+                        <li><a href="./partners.html" class="text-white hover:text-white">Partners</a></li>
                     </ul>
                 </div>
                 <!--End Col-->
                 <div class="lg:col-span-2 text-center sm:text-left">
-                    <h4 class="text-lg text-white font-medium mb-3">Contact</h4>
+                    <h4 class="text-lg text-white font-bold mb-3 text-[20px] font-passenger">Contact</h4>
                     <ul class="text-sm transition-all duration-500">
-                        <li class="mb-3"><a href="#" class="text-white hover:text-white">CheersTag.com</a></li>
+                        <li class="mb-3"><a href="../index.html" class="text-white hover:text-white ">CheersTag.com</a>
+                        </li>
                         <li class="mb-3"><a href="#" class="text-white hover:text-white">Amstelveen</a></li>
                         <li class="mb-3"><a href="#" class="text-white hover:text-white">info@cheerstag.com</a></li>
                         <li><a href="#" class="text-white hover:text-white">+31 (0)6 42752700</a></li>
@@ -259,7 +262,6 @@
         </div>
     </footer>
     <!-- footer ended  -->
-
 
 
 
